@@ -8,7 +8,6 @@ import com.nicico.sales.repository.MoveDAO;
 import com.nicico.sales.repository.PlantMaterialPackTypeDAO;
 import com.nicico.sales.repository.ReportInfoDAO;
 import com.nicico.sales.repository.projection.IMovement;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -17,21 +16,22 @@ import java.util.List;
 @Service
 public class GetReportService implements IGetReportService {
 
-    @Autowired
-    MoveDAO moveRepository;
-   /* @Autowired
-    Sales salesRepository;*/
-    @Autowired
-   PlantMaterialPackTypeDAO plantMaterialPackTypeRepository;
-    @Autowired
-    ReportInfoDAO infoRepository;
+    final MoveDAO moveRepository;
 
+    final PlantMaterialPackTypeDAO plantMaterialPackTypeRepository;
+    final ReportInfoDAO infoRepository;
 
 
     List<IMovement> movementList = new ArrayList<>();
     List<ReportDetails> reportDetails = new ArrayList<>();
 
     Long PackType = Long.valueOf(0);
+
+    public GetReportService(MoveDAO moveRepository, PlantMaterialPackTypeDAO plantMaterialPackTypeRepository, ReportInfoDAO infoRepository) {
+        this.moveRepository = moveRepository;
+        this.plantMaterialPackTypeRepository = plantMaterialPackTypeRepository;
+        this.infoRepository = infoRepository;
+    }
 
 
     /*@PostConstruct
@@ -41,78 +41,83 @@ public class GetReportService implements IGetReportService {
 
     @Override
     public List<ReportDetails> getMoveInfo(String date) {
-
-        movementList = moveRepository.findMovement(date);
-
-
-        //ArrayList<Movement> movements= movementList;
-
-        PMPTYPE plantMaterialPackType = new PMPTYPE();
-        ArrayList<Integer> solfor = new ArrayList<Integer>(4);
-        ArrayList<Integer> kotod = new ArrayList<Integer>(5);
-        kotod.add(9);
-        kotod.add(10);
-        kotod.add(11);
-        kotod.add(114);
-        kotod.add(129);
-        solfor.add(2);
-        solfor.add(14);
-        solfor.add(120);
-        solfor.add(121);
-        Integer rosobElectrolizAnod = 100;
-        Integer maftolMess = 1;
-        Integer oksidMolibden = 97;
-        // if(infoRepository.movementList.get(0).getTZN_DATE())
+        if (infoRepository.IfExistenceAnyObjectInDate(date).size() == 0) {
+            movementList = moveRepository.findMovement(date);
 
 
-        test:
-        for (IMovement mm : movementList) {
+            PMPTYPE plantMaterialPackType = new PMPTYPE();
+            ArrayList<Integer> solfor = new ArrayList<Integer>(4);
+            ArrayList<Integer> kotod = new ArrayList<Integer>(7);
+            kotod.add(9);
+            kotod.add(10);
+            kotod.add(11);
+            kotod.add(114);
+            kotod.add(129);
+            kotod.add(90);
+            kotod.add(86);
+            solfor.add(2);
+            solfor.add(14);
+            solfor.add(120);
+            solfor.add(121);
+            Integer rosobElectrolizAnod = 100;
+            Integer maftolMess = 1;
+            Integer oksidMolibden = 97;
+            // if(infoRepository.movementList.get(0).getTZN_DATE())
 
-            boolean t = mm.getPACKNAME().contains("فله") || mm.getPACKNAME().matches("0");
-            int gscode = mm.getGDSCODE().intValue();
-            boolean l = (gscode == rosobElectrolizAnod || oksidMolibden == gscode);
-            boolean k = gscode == maftolMess;
-            String materialname = mm.getGDSNAME();
 
-            if (!solfor.contains(gscode)) {
-                if (t) {
-                    setPackType(Long.valueOf(1));
+            test:
+            for (IMovement mm : movementList) {
+
+                boolean t = mm.getPACKNAME().contains("فله") || mm.getPACKNAME().matches("0");
+                int gscode = mm.getGDSCODE().intValue();
+                boolean l = (gscode == rosobElectrolizAnod || oksidMolibden == gscode);
+                boolean k = gscode == maftolMess;
+                String materialname = mm.getGDSNAME();
+
+                if (!solfor.contains(gscode)) {
+                    if (t) {
+                        setPackType(Long.valueOf(1));
+                    } else {
+                        if (kotod.contains(gscode))
+                            setPackType(Long.valueOf(2));
+
+                        else if (l) {
+                            setPackType(Long.valueOf(3));
+                        } else if (k) {
+                            setPackType(Long.valueOf(4));
+                        } else continue test;
+                    }
+                } else continue test;
+
+                ReportDetails reportInfo = new ReportDetails();
+                Long plant_id = new Long(0);
+                // if plant be meiduk has be maped to sarcheshmeh
+                if (mm.getSpi() == 2)
+                    plant_id = new Long(1);
+                    // mean: these material dont have plant
+                else if (l || k)
+                    plant_id = new Long(0);
+                else plant_id = mm.getSpi();
+                plantMaterialPackType = plantMaterialPackTypeRepository.findAllByGDSCODEAndPLANT_IDAndPACK_TYPE(mm.getGDSCODE(), plant_id, getPackType());
+
+                reportInfo.setTzn_date(mm.getTZN_DATE());
+                reportInfo.setValue(mm.getWazn());
+
+                reportInfo.setPMPTYPE_id(plantMaterialPackType.getP_id());
+                if (mm.getCONDITION().substring(0, 4).contains("load")) {
+                    reportInfo.setLoadOrUnload(new Long(0));
+                    //   calInput(mm.getTZN_DATE(), plantMaterialPackType.getP_id(), mm.getWazn());
                 } else {
-                    if (kotod.contains(gscode))
-                        setPackType(Long.valueOf(2));
-
-                    else if (l) {
-                        setPackType(Long.valueOf(3));
-                    } else if (k) {
-                        setPackType(Long.valueOf(4));
-                    } else continue test;
+                    reportInfo.setLoadOrUnload(new Long(1));
+                    //  calOutput(mm.getTZN_DATE(), plantMaterialPackType.getP_id(), mm.getWazn());
                 }
-            } else continue test;
+                reportDetails.add(reportInfo);
+                infoRepository.save(reportInfo);
 
-            ReportDetails reportInfo = new ReportDetails();
-            Long plant_id = new Long(0);
-            if (mm.getSpi() == 2)
-                plant_id = new Long(1);
-            else if (l || k)
-                plant_id = new Long(0);
-            else plant_id = mm.getSpi();
-            plantMaterialPackType = plantMaterialPackTypeRepository.findAllByGDSCODEAndPLANT_IDAndPACK_TYPE(mm.getGDSCODE(), plant_id, getPackType());
-
-            reportInfo.setTzn_date(mm.getTZN_DATE());
-            reportInfo.setValue(mm.getWazn());
-
-            reportInfo.setPMPTYPE_id(plantMaterialPackType.getP_id());
-            if (mm.getCONDITION().substring(0,4).contains("load")) {
-                reportInfo.setLoadOrUnload(new Long(0));
-                //   calInput(mm.getTZN_DATE(), plantMaterialPackType.getP_id(), mm.getWazn());
-            } else {
-                reportInfo.setLoadOrUnload(new Long(1));
-                //  calOutput(mm.getTZN_DATE(), plantMaterialPackType.getP_id(), mm.getWazn());
             }
-            reportDetails.add(reportInfo);
-            infoRepository.save(reportInfo);
-
         }
+
+        reportDetails = infoRepository.IfExistenceAnyObjectInDate(date);
         //calLast();
         return reportDetails;
 
